[gd_scene load_steps=16 format=3 uid="uid://dfwvndhpp8eyr"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/navButton.gd" id="1_k7wod"]
[ext_resource type="Texture2D" uid="uid://dknk1c1wxlrd0" path="res://RDE_Images/menu_background1.png" id="1_ks66d"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/home_menu.gd" id="1_rhmab"]
[ext_resource type="Texture2D" uid="uid://pqj8avqrkuop" path="res://RDE_Images/RDE_Logo2.png" id="1_rtoss"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/h_main_menu.gd" id="3_yrxxt"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/h_fight_menu.gd" id="6_5qig2"]
[ext_resource type="Texture2D" uid="uid://dq1u0bk36p7ji" path="res://RDE_Images/rt_ringtail3.png" id="7_4ujhj"]
[ext_resource type="StyleBox" uid="uid://cy1320dwp485f" path="res://RDE_Images/StyleBoxFlats/fight_select_button1.tres" id="7_lsrqf"]
[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Menu UI/fight_select_button.gd" id="7_wokig"]

[sub_resource type="SystemFont" id="SystemFont_aelly"]
font_names = PackedStringArray("OldNewspaperTypes")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12rjp"]
bg_color = Color(0, 0, 0, 0.431373)
border_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hm51s"]
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 5
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nl06b"]
bg_color = Color(0, 0, 0, 0.431373)
border_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_atiyc"]
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
border_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 5

[sub_resource type="Theme" id="Theme_imtrs"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(1, 0.854902, 0.462745, 1)
Button/colors/font_hover_color = Color(1, 0.930294, 0.749338, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 15
Button/fonts/font = SubResource("SystemFont_aelly")
Button/styles/disabled = SubResource("StyleBoxFlat_12rjp")
Button/styles/focus = SubResource("StyleBoxFlat_hm51s")
Button/styles/hover = SubResource("StyleBoxFlat_nl06b")
Button/styles/normal = ExtResource("7_lsrqf")
Button/styles/pressed = SubResource("StyleBoxFlat_atiyc")

[node name="Home Menu" type="CanvasLayer" node_paths=PackedStringArray("main_menu", "fight_menu")]
script = ExtResource("1_rhmab")
main_menu = NodePath("Main Menu")
fight_menu = NodePath("Fight Menu")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ks66d")
stretch_mode = 6

[node name="Main Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yrxxt")

[node name="Title" type="TextureRect" parent="Main Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.5
offset_top = 100.0
offset_right = 376.5
offset_bottom = 292.0
grow_horizontal = 2
texture = ExtResource("1_rtoss")

[node name="HBoxContainer" type="HBoxContainer" parent="Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = 100.0
offset_right = 123.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(113.045, -1.185)
theme_override_constants/separation = 10

[node name="playB" type="Button" parent="Main Menu/HBoxContainer"]
layout_mode = 2
text = "Play"
script = ExtResource("1_k7wod")

[node name="settingsB" type="Button" parent="Main Menu/HBoxContainer"]
layout_mode = 2
text = "Settings"
script = ExtResource("1_k7wod")

[node name="creditsB" type="Button" parent="Main Menu/HBoxContainer"]
layout_mode = 2
text = "Credits"
script = ExtResource("1_k7wod")

[node name="quitB" type="Button" parent="Main Menu/HBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("1_k7wod")

[node name="Fight Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_5qig2")

[node name="MarginContainer" type="MarginContainer" parent="Fight Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="HBoxContainer" type="HBoxContainer" parent="Fight Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="FightB Container" type="ScrollContainer" parent="Fight Menu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="Button Container" type="VBoxContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightB Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="RgEASY" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightB Container/Button Container"]
layout_mode = 2
theme = SubResource("Theme_imtrs")
theme_override_font_sizes/font_size = 75
text = "EASY"
script = ExtResource("7_wokig")
fight_type = "STORY_RGT_EASY"

[node name="RgNORM" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightB Container/Button Container"]
layout_mode = 2
theme = SubResource("Theme_imtrs")
theme_override_font_sizes/font_size = 75
text = "NORMAL"
script = ExtResource("7_wokig")
fight_type = "STORY_RGT_NORM"

[node name="RgHARD" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightB Container/Button Container"]
layout_mode = 2
theme = SubResource("Theme_imtrs")
theme_override_font_sizes/font_size = 75
text = "HARD"
script = ExtResource("7_wokig")
fight_type = "STORY_RGT_HARD"

[node name="RgTRUE" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightB Container/Button Container"]
layout_mode = 2
theme = SubResource("Theme_imtrs")
theme_override_font_sizes/font_size = 75
disabled = true
text = "TRUE"
script = ExtResource("7_wokig")
is_locked = true

[node name="FightDesc Container" type="MarginContainer" parent="Fight Menu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container"]
layout_mode = 2

[node name="Desc" type="VBoxContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/Desc"]
layout_mode = 2
texture = ExtResource("7_4ujhj")

[node name="PanelContainer" type="PanelContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/Desc"]
layout_mode = 2

[node name="Text" type="Label" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/Desc/PanelContainer"]
layout_mode = 2
text = "this is the description text for inrgfjfowerhjr s sd STOP STRECHING GRAAAAHHH"
autowrap_mode = 3

[node name="Mode" type="PanelContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "BACK"
script = ExtResource("1_k7wod")

[node name="ChnagePanelB" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "MODE"
script = ExtResource("1_k7wod")

[node name="Play" type="Button" parent="Fight Menu/MarginContainer/HBoxContainer/FightDesc Container/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PLAY"
script = ExtResource("1_k7wod")

[connection signal="pressed" from="Main Menu/HBoxContainer/playB" to="Main Menu" method="_on_play_b_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/settingsB" to="Main Menu" method="_on_settings_b_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/creditsB" to="Main Menu" method="_on_credits_b_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/quitB" to="Main Menu" method="_on_quit_b_pressed"]
